# AI-POC

./: .gitattributes  .gitignore  INFO.MD  README.md  TODO.md  URL.MD  pyproject.toml
agents/auto-gpt/: README.MD
agents/babyagi/: README.MD
agents/gpt-engineer/: README.MD  generate.sh  prompt  run.sh
agents/gpt-engineer/.gpteng/memory/logs/: all_output.txt  gen_entrypoint_chat.txt
agents/gpt-engineer/src/: app.py  websocket_handler.py
agents/gpt-engineer/src/controller/: game_controller.py
agents/gpt-engineer/src/model/: game_state.py  snake.py
agents/gpt-engineer/templates/: index.html
common/: cfg.py  helper.py  ml.py
data/docs/md/: Blendle library 64396b41895842d680d118f4ec17d346.md  DNA & culture b5db7bb937384f809a81e84059050b3f.md  Diversity and inclusion dbd07fc1bf0849019f3f3ed242190055.md  Feedback cycle e838f6e605064170bb0611f538915cb7.md  General & practical b8d9412f67c34a3e996bf4d3f390de5e.md  Getting people in (branding&sourcing) e050e6613efe4305b98d6b7b8c8916a3.md  Hiring 8c7049f20ed74df982f8e05bc3dca30b.md  History ac6441b1b7f7412796b072168db92fd2.md  Office 4e7a0f0ad8e34c50bba69cfd9f779038.md  Party and study budget 49f8b0f9dfbf45ea8ed15dd11c99e28d.md  Sickness absence 75f3765b7698473aa45171b909ff1e65.md  Soft shizzle 7c03996eeb634b12ad9093839cd11bde.md  Time off holidays and national holidays b1b4abd60ae547e8b4088818da9e92e7.md  Travel costs and reimbursements 4df295267aa74fe1a7fa1361571b6fbc.md  Your 1st month c6f4af5517c84d4087e635587961fb0e.md
data/docs/txt/: txt_example1.txt
examples/001_hugging_face_cv_and_nlp_task/: main.py
examples/001_hugging_face_vs_nlp_task/: Readme.md  main.py
frameworks/: README.md
frameworks/graph/panel/: README.md
frameworks/graph/panel/tasks/fetch_data/: fetch_data.ipynb  fetch_data.py
frameworks/langchain/: README.md  main.py  requirements.txt
frameworks/langchain/01_chat_with_data/: collection_data.pkl  main.py  ml.py  result_collection.pkl
frameworks/langchain/chat_app/gpt_panel_ui1/: chat_app.ipynb  chat_app.py
frameworks/langchain/chat_app/gpt_panel_ui2/: chat_app.py  chat_app2.py
frameworks/langchain/chat_app/gpt_streamlit_ui/: README.MD  chat_app3_streamlit.py  generate_response.pkl  run.sh
frameworks/langchain/chat_with_data/: collection_data.pkl  conversational_retrieval_chain.pkl  langchain_qa.pkl  main.py  retrieval_qa.pkl  run1.py  run2.py  test_debug_qa_diff_chain_types.pkl  test_qa.pkl  test_qa_w_prompt_tmpl.pkl  vector_store_index_qa.pkl
frameworks/langchain/common/: cfg.py  ml.py
frameworks/langchain/data/docs/md/: #letstalkaboutstress b814c542d1744bbb83bf7e1d63e4bdda.md  About this document and the author 8c7a88f91b1d479ea729a6f47ef56d0c.md  Blendle Social Code d10a41a7746c4bd2ab4c3fe6db803f69.md  Blendle's Employee Handbook e367aa77e225482c849111687e114a56.md  Calling in sick better 4337662f835a4a00933b76b254758bc4.md  Firing 0a07fff173404adebf98ea7ef3a8eb7d.md  (+13 more)
frameworks/langchain/data/youtube/: url1.url
frameworks/langchain/overview/diff_llm_providers/: ask_qns_via_model.pkl.example  chain_of_few_llms.pkl  conversation_chain_with_memory.pkl  diff_llms.py  qa_using_diff_provider_models.pkl  qa_using_external_doc.pkl  qa_using_external_docs.pkl
frameworks/langchain/overview/diff_solutions/: agents.pkl  chain_of_few_llms.pkl  chatgpt_plugins.pkl  conversation_chain_with_memory.pkl  diff_cases1.py
graph/panel/tasks/: show_in_browser.py
libs/anthropic/prompts/: README.MD
libs/anthropic/prompts/python_bug_buster/: README.MD  example.py  example_ai.py
libs/anthropic/vision/: example.py
models/ollama/: test.py
tasks/: README.md  TODO.MD
tasks/CV/001_hugging_face_cv_and_nlp_task/: main.py
tasks/ChatBot/: README.MD
tasks/MediaToText/001_fastapi_image_to_text_desc/: README.md  main.py  model.py  model_starter.py
tasks/Mixed/: README.MD
tasks/OwnData/001_chat_gpt_and_langchain_with_own_data/: README.MD  chatgpt.py  constants.py
tasks/OwnData/002_llama_index/: README.MD
tasks/TextToMedia/: README.md
tasks/TextToMedia/001_fastapi_text_to_image_local/: README.md  main.py  ml.py
theory/: README.MD
