[tool.poetry]
name = "AI-POC"
version = "0.1.0"
description = ""
authors = ["Alex Nestu"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
flask = "^3.0.3"
requests = "^2.32.3"
opencv-python = "^4.10.0.84"
tenacity = "^8.4.2"
matplotlib = "^3.9.0"
langchain = "^0.2.6"
diffusers = "^0.29.2"
transformers = "^4.42.3"
scipy = "^1.14.0"
ftfy = "^6.2.0"
mypy = "^1.10.1"
ruff = "^0.5.0"
black = "^24.4.2"
ipykernel = "^6.29.5"
torch = "^2.3.1"
jupyter = "^1.0.0"
fastapi = "^0.111.0"
accelerate = "^0.32.1"
openai = "^1.35.10"
chromadb = "^0.5.3"
tiktoken = "^0.7.0"
langchain-community = "^0.2.6"
unstructured = "^0.14.9"
#unstructured = { version = "*", extras = ["pdf"] }
huggingface-hub = "^0.23.4"
layoutparser = "^0.3.4"
pillow-heif = "^0.17.0"
unstructured-inference = "^0.7.36"
unstructured-pytesseract = "^0.3.12"
pytesseract = "^0.3.10"
sentence-transformers = "^3.0.1"
pypdf = "^4.2.0"
yt-dlp = "^2024.7.2"
pydub = "^0.25.1"
librosa = "^0.10.2.post1"
faster-whisper = "^1.0.3"
spacy = "^3.7.5"
faker = "^26.0.0"
langchain-huggingface = "^0.0.3"
langchain-openai = "^0.1.14"
lark = "^1.1.9"
optimum = "^1.21.2"
openvino = "^2024.2.0"
nncf = "^2.11.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
